--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_gravity="bottom"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:background="@android:color/transparent">
         <Button
             android:id="@+id/btn_recording"
