修改按钮字体颜色，测试git ssh连接 提交

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content"
             android:text="录像"
             android:textSize="14sp"
+            android:textColor="@android:color/black"
             android:background="@android:color/transparent"/>
     </RelativeLayout>
 </LinearLayout>
